--- a/lab4_2.html
+++ b/lab4_2.html
@@ -16,18 +16,19 @@
 
         document.write("Початковий масив: " + arr.join("  ") + "<br>");
 
-        var minElement = arr[0];
+        var maxElement = arr[0];
+        var maxElementIndex = 0;
         for (var i = 1; i < arr.length; i++) {
-            if (arr[i] < minElement) {
-                minElement = arr[i];
+            if (arr[i] > maxElement) {
+                maxElement = arr[i];
+                maxElementIndex = i;
             }
         }
 
-        var minElementIndex = arr.indexOf(minElement);
-
-        var sum = arr[0] + arr[arr.length - 1];
-
-        arr[minElementIndex] = sum;
+        // Swap the max element with the last element
+        var temp = arr[arr.length - 1];
+        arr[arr.length - 1] = maxElement;
+        arr[maxElementIndex] = temp;
 
         document.write("Масив після заміни: " + arr.join("  ") + "<br>");
     </script>
