--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1, initial-scale=1.0">
-    <title>лабораторна 14</title>
+    <title>Лабораторна робота 14</title>
 </head>
 <body>
     <h1>лабораторна робота 14</h1>
