--- a/lab4_1.html
+++ b/lab4_1.html
@@ -28,6 +28,7 @@
         });
 
         document.write("Відсортований масив rez у зворотному порядку: " + rez.join("  ") + "<br>");
+        document.write('<button onclick="window.location.href=\'index.html\'">Назад</button>');
     </script>
-</body>
+</body>1
 </html>
