--- a/lab4_1.html
+++ b/lab4_1.html
@@ -28,7 +28,12 @@
         });
 
         document.write("Відсортований масив rez у зворотному порядку: " + rez.join("  ") + "<br>");
-        document.write('<button onclick="window.location.href=\'index.html\'">Назад</button>');
+        var button = document.createElement('button');
+        button.innerHTML = 'Назад';
+        button.onclick = function() {
+            window.location.href = 'index.html';
+        };
+        document.body.appendChild(button);
     </script>
 </body>1
 </html>
