--- a/lab4_1.html
+++ b/lab4_1.html
@@ -27,7 +27,7 @@
             return b - a;
         });
 
-        document.write("Відсортований масив rez у зворотному порядку: " + rez.join("  ") + "<br>");
+        document.write("Відсортований масив rez у зворотному порядку: " + rez.join("  ") + "<br>");//
         var button = document.createElement('button');
         button.innerHTML = 'Назад';
         button.onclick = function() {
