--- a/lab4_1.html
+++ b/lab4_1.html
@@ -37,3 +37,10 @@
     </script>
 </body>
 </html>
+<!-- Сформуйте одновимірний масив (не менше 15 елементів,
+ для генерації значень масиву можна скористатися функцією 
+ random об'єкта Math), виведіть значення цього масиву на
+  екран у рядок. Виконайте завдання відповідно 
+до вашого номера в журналі, не використовуючи вбудовані функції.
+
+Знайти максимальний елемент та поміняти його місцями з останнім елементом масиву. -->
